# auto-drop

./: Cargo.toml
src/: auto_drop.rs  globals.rs  lib.rs
