[package]
name = "auto-drop"
version = "0.1.0"
edition = "2018"
rust-version = "1.31.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dtor", "ctrlc"]
dtor = ["dep:ctor"]
ctrlc = ["dep:ctor", "dep:ctrlc"]
ctrlc-termination = ["ctrlc", "ctrlc/termination"]

[dependencies]
lazy_static = "1.4"
ctor = { version = "0.2.4", optional = true }
ctrlc = { version = "3.4.1", optional = true }
